--- a/movies/package.json
+++ b/movies/package.json
@@ -15,9 +15,12 @@
         "@emotion/styled": "^11.11.0",
         "@mui/icons-material": "^5.14.14",
         "@mui/material": "^5.14.14",
+        "@reduxjs/toolkit": "^1.9.7",
+        "@types/react-redux": "^7.1.31",
         "graphql": "^16.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-redux": "^8.1.3",
         "react-router-dom": "^6.18.0"
     },
     "devDependencies": {
